# data_platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 719cb4fe0bac_initial_migration.py
data_platform/: config.py  exceptions.py  logger_config.py  routers.py
data_platform/broker/: kafka_producer.py
data_platform/crud/: data_entry.py
data_platform/database/: base.py  db_helper.py  models.py
data_platform/schemas/: data_entry.py
data_platform/services/: data_entry_service.py
