[project]
name = "data-platform"
version = "0.1.0"
description = "Service for data serialization."
authors = [
    {name = "Vladislav Isakovskiy",email = "vladislav.isakovskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]

[tool.poetry]
packages = [{include = "data_platform", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
