[project]
name = "data-platform"
version = "0.1.0"
description = "Service for data serialization."
authors = [
    {name = "Vladislav Isakovskiy",email = "vladislav.isakovskiy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
[tool.poetry.dependencies]
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
aiokafka = "^0.12.0"
pydantic = "^2.10.6"
loguru = "^0.7.3"
alembic = "^1.14.1"
orjson = "^3.10.15"
pydantic-settings = {extras = ["yaml"], version = "^2.7.1"}


[tool.poetry.group.lint.dependencies]
black = {version = "25.1.0", extras = ["d"]}
flake8 = "7.1.2"
mypy = "1.15.0"
isort = "6.0.0"

[tool.isort]
profile = "black"
extend_skip = ["__init__.py"]

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
